<resources>
    <string name="app_name">Fitness App</string>
    <string name="active_goals">Active Goals</string>
    <string name="goal_history">Goal history</string>
    <string name="goal_name">Goal Name</string>
    <string name="sample_goal">Sample Goal</string>
    <string name="steps_completed">Steps completed</string>
    <string name="active">Active</string>
    <string name="target">Target</string>
    <string name="save">save</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="goals">Goals</string>
</resources>